Basically finished the pinned section of the index page. --- Fixed the gaps between the cubes and increased the width of the element, making it the same as the aboutme section. --- Added tooltips to the cubes which was reused code from the name.js file with some extra elements to handle the rotatio of the cubes. --- Made it look nice in contrast to the page by adding a border (Used the same colour as the navbar background. --- Might come back to it later and change the background of the scene but for now it looks nice. --- Going to add comments to the new code now before I move onto the timeline section.

--- a/styles/index.css
+++ b/styles/index.css
@@ -261,16 +261,26 @@ body {
 }
 
 #pinned {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 40px;
-}
-
-#new-pinned {
-    width: 75%;
+    width: 77%;
     height: 400px;
     margin: 0 auto;
+    position: relative;
+    border-color: #3A506B;
+    border-style: solid;
+    box-sizing: border-box;
+}
+
+#pinned #pinned-tooltip {
+    position: absolute;
+    padding: 4px 8px;
+    background: rgba(0, 0, 0, 0.75);
+    color: white;
+    border-radius: 4px;
+    pointer-events: none;
+    font-family: sans-serif;
+    font-size: 14px;
+    display: none;
+    z-index: 10;
 }
 
 #timeline {
